<resources>
    <string name="app_name">Form</string>
    <string name="name">Enter the Name</string>
    <string name="password_0_9">Enter the Password</string>
    <string name="e_mail">Enter the E-Mail</string>
    <string name="contact_number">Enter the Moblie No</string>
    <string name="submit">Submit</string>
    <string name="country">Enter the country</string>
    <string name="last_name">lastname</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="are_you_minor">Are you minor</string>
    <string name="button_1">NEXT</string>
    <string name="button_2">SUBMIT</string>
    <string name="button_3">BACK</string>
    <string name="add">add</string>
    <string name="favourites">Favourites</string>
    <string name="search">Search</string>
    <string name="more_options">More Options</string>
    <string name="person">Person</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string-array name="country">
        <item>India</item>
        <item>USA</item>
        <item>Pakistan</item>
        <item>Bangladesh</item>
        <item>Egypt</item>
        <item>Indonesia</item>
        <item>UK</item>
        <item>Germany</item>
    </string-array>
</resources>